[gd_scene load_steps=2 format=2]

[ext_resource path="res://hacks/PlayerDetectionZone.gd" type="Script" id=1]

[node name="PlayerDetectionZone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
